[package]
name = "ft_for_launcher"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Vincent <vincent@decentralisedengineeringltd.co.uk>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
wee_alloc = "0.4.5"

[profile.release]
codegen-units=24
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true